# FootballManagement

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  AGENT.md  AI_GUIDELINES.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GEMINI.md  LICENSE  Makefile  README.md  about.html  before_benchmarks.txt  contribute.html  football_manager.db  index.html  pr_body.md  roadmap.html  sonar-project.properties  sonarqube_issues.tsv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md
.github/workflows/: ci.yml  deploy_docs.yml
api/: ARCHITECTURE_8md.html  README_8md.html  SQLLoader_8cpp.html  SQLLoader_8h.html  SQLLoader_8h.js  SQLLoader_8h_source.html  annotated.html  annotated_dup.js  button__manager_8cpp.html  button__manager_8h.html  button__manager_8h.js  button__manager_8h_source.html  calendar_8cpp.html  calendar_8h.html  calendar_8h_source.html  classButtonManager-members.html  classButtonManager.html  classButtonManager.js  classCalendar-members.html  classCalendar.html  classCalendar.js  classDataGenerator-members.html  classDataGenerator.html  classDataGenerator.js  classDatabaseConnection-members.html  classDatabaseConnection.html  classDatabaseConnection.js  classDatabaseException.html  classDropdown-members.html  classDropdown.html  classDropdown.js  classFinances-members.html  classFinances.html  classFinances.js  classFixtureRepository-members.html  classFixtureRepository.html  classFixtureRepository.js  classGUIScene-members.html  classGUIScene.html  classGUIScene.js  (+445 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_23.js  all_24.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+102 more)
assets/: first_names.json  imgui.ini  last_names.json  league_names.json  stats_config.json  team_names.json
assets/db/: queries.sql  schema.sql
assets/lang/: English.json  Italian.json
assets/user_made_data/leagues/: leagues.json
assets/user_made_data/players/: lecce_players.json
assets/user_made_data/teams/: english_league.json  french_league.json  german_league.json  italian_league.json  mixed.json  spanish_league.json
benchmarks/: CMakeLists.txt  db_benchmark.cpp
build_before/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_before/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake  db_benchmarks
build_before/src/: Makefile  cmake_install.cmake
build_before/src/global/: paths.h
build_before/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests_e3b0c442_discovery.cmake  unit_tests_e3b0c442_include.cmake
docs/: ARCHITECTURE.md  TRANSFER_MARKET.md  index.html  roadmap.html
docs/theme/: custom-theme.css
logs/: log.txt
scripts/: update_copyrights.py
src/: CMakeLists.txt  calendar.cpp  calendar.h  database.cpp  database.h  datagenerator.cpp  datagenerator.h  game.cpp  game.h  global.h  league.cpp  league.h  logger.cpp  logger.h  main.cpp  match.cpp  match.h  player.cpp  player.h  settings_manager.cpp  settings_manager.h  team.cpp  team.h
src/controller/: game_controller.cpp  game_controller.h
src/database/: SQLLoader.cpp  SQLLoader.h  database.cpp  database.h  database_connection.cpp  database_connection.h  database_exception.h  datagenerator.cpp  datagenerator.h  gamedata.cpp  gamedata.h
src/database/repositories/: fixture_repository.cpp  fixture_repository.h  game_state_repository.cpp  game_state_repository.h  league_repository.cpp  league_repository.h  player_repository.cpp  player_repository.h  team_repository.cpp  team_repository.h
src/global/: global.h  language_manager.cpp  language_manager.h  languages.h  logger.cpp  logger.h  paths.h  paths.h.in  queries.h  roles.h  stats_config.h  types.h
src/gui/: button_manager.cpp  button_manager.h  dropdown.cpp  dropdown.h  gui_constants.h  gui_scene.cpp  gui_scene.h  gui_view.cpp  gui_view.h
src/gui/scenes/: lineup_scene.cpp  lineup_scene.h  main_game_scene.cpp  main_game_scene.h  main_menu_scene.cpp  main_menu_scene.h  match_scene.cpp  match_scene.h  roster_scene.cpp  roster_scene.h  settings_scene.cpp  settings_scene.h  strategy_scene.cpp  strategy_scene.h  team_selection_scene.cpp  team_selection_scene.h  transfer_market_scene.cpp  transfer_market_scene.h
src/model/: calendar.cpp  calendar.h  database.cpp  database.h  datagenerator.cpp  datagenerator.h  finance.h  finances.cpp  finances.h  game.cpp  game.h  gamedate.cpp  gamedate.h  global.h  league.cpp  league.h  lineup.cpp  lineup.h  manager.cpp  manager.h  match.cpp  match.h  match_engine.cpp  match_engine.h  player.cpp  player.h  role_utils.cpp  role_utils.h  settings_manager.cpp  settings_manager.h  stats_config.h  strategy.cpp  strategy.h  team.cpp  team.h  transfer_listing.cpp  transfer_listing.h
src/view/cli/: cli_view.cpp  cli_view.h
src/view/gui/: button_manager.cpp  button_manager.h  dropdown.cpp  dropdown.h  gui_scene.cpp  gui_scene.h  gui_view.cpp  gui_view.h
src/view/gui/scenes/: main_game_scene.cpp  main_game_scene.h  main_menu_scene.cpp  main_menu_scene.h  roster_scene.cpp  roster_scene.h  settings_scene.cpp  settings_scene.h  strategy_scene.cpp  strategy_scene.h  team_selection_scene.cpp  team_selection_scene.h
test/: CMakeLists.txt  test_database.cpp  test_game_flow.cpp  test_gamedata.cpp  test_match_engine.cpp  test_player.cpp  test_transfer_market.cpp
website/css/: styles.css
website/html/: about.html  contribute.html  index.html  roadmap.html
